fixed: horizontal scroll in mobile and tablet version; changed way of show/hide of sidebar

--- a/src/components/aside/aside.component.less
+++ b/src/components/aside/aside.component.less
@@ -1,37 +1,56 @@
 .aside {
-    position: absolute;
+    position: fixed;
+    right: 0;
     top: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     height: 100%;
-    box-sizing: border-box;
-    background-color: #F9F9F9;
-    z-index: 1;
-    transition: 0.5s;
+    width: 100%;
+    transition: transform 0.5s;
+    background-color: rgba(0,0,0, .5);
 
-    //mobile - tablet
-    @media (min-width: @sizes[mobile]) and (max-width: @sizes[tablet] - 1) {
-        width: 271px;
-        right: -271px;
-        padding: 20px 30px 30px 20px;
+    &_hidden {
+        transform: translateX(100%);
     }
-    //tablet +
-    @media (min-width: @sizes[tablet]) {
-        width: 304px;
-        right: -304px;
-        padding: 38px 42px 42px 44px;
+
+    &__cleaner {
+        margin: 0 0 0 auto;
+        background-color: #F9F9F9;
+
+        //mobile - tablet -1
+        @media screen and (min-width: @sizes[mobile]) and (max-width: @sizes[tablet] - 1) {
+            width: 49px;
+            height: 49px;
+        }
+
+        //tablet - desktop - 1
+        @media screen and (min-width: @sizes[tablet]) and (max-width: @sizes[desktop] - 1) {
+            width: 62px;
+            height: 62px;
+        }
     }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        box-sizing: border-box;
+        background-color: #F9F9F9;
+
+        //mobile - tablet
+        @media (min-width: @sizes[mobile]) and (max-width: @sizes[tablet] - 1) {
+            max-width: 271px;
+            padding: 20px 30px 30px 20px;
+        }
+        //tablet +
+        @media (min-width: @sizes[tablet]) {
+            max-width: 304px;
+            padding: 38px 42px 42px 44px;
+        }
+    }
+
     //desktop +
     @media (min-width: @sizes[desktop]) {
         display: none;
-    }
-
-
-    &_active {
-        position: fixed;
-        right: 0;
-        transition: 0.5s;
     }
 
     &__menu {
