--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -14,6 +14,7 @@ body {
     height: 100%;
     margin: 0;
     overflow-x: hidden;
+    width: 100vw;
 
     background-position: center top;
     background-repeat: no-repeat;
